<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


<!--    button home -->
    <Button
        android:layout_width="100dp"
        android:layout_height="@android:dimen/notification_large_icon_height"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/FragmentBtn1"
        android:backgroundTint="@color/teal_700"
        android:text="@string/menu_Home"/>

<!-- button map-->
    <Button
        android:id="@+id/FragmentBtn2"
        android:layout_width="100dp"
        android:layout_height="@android:dimen/notification_large_icon_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/menu_Map" />

<!--    button menu-->
    <Button
        android:layout_width="100dp"
        android:layout_height="@android:dimen/notification_large_icon_height"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="290dp"
        android:id="@+id/FragmentBtn3"
        android:backgroundTint="@color/teal_700"
        android:text="@string/menu_Profile"/>

<!--    button ratings-->
    <Button
        android:id="@+id/FragmentBtn4"
        android:layout_width="100dp"
        android:layout_height="@android:dimen/notification_large_icon_height"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="290dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/menu_Ratings" />




</RelativeLayout>